--- a/src/auftragsverwaltungssystem/StartAV.form
+++ b/src/auftragsverwaltungssystem/StartAV.form
@@ -11,6 +11,9 @@
             <Property name="mnemonic" type="int" value="102"/>
             <Property name="text" type="java.lang.String" value="Datei"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmDateiActionPerformed"/>
+          </Events>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="miAbmelden">
               <Properties>
@@ -43,6 +46,9 @@
             <Property name="mnemonic" type="int" value="101"/>
             <Property name="text" type="java.lang.String" value="Auftrag"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmAuftragActionPerformed"/>
+          </Events>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="miAuftraganzeigen">
               <Properties>
@@ -79,6 +85,9 @@
             <Property name="mnemonic" type="int" value="104"/>
             <Property name="text" type="java.lang.String" value="Artikel"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmArtikelActionPerformed"/>
+          </Events>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="miArtikelanzeigen">
               <Properties>
@@ -112,6 +121,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Suche"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmSucheActionPerformed"/>
+          </Events>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="miAuftragSuche">
               <Properties>
@@ -525,7 +537,7 @@
                                                       <Component id="jlAuftragsart" min="-2" max="-2" attributes="0"/>
                                                       <Component id="jlStatus" alignment="0" min="-2" max="-2" attributes="0"/>
                                                   </Group>
-                                                  <EmptySpace pref="70" max="32767" attributes="0"/>
+                                                  <EmptySpace pref="88" max="32767" attributes="0"/>
                                                   <Group type="103" groupAlignment="0" attributes="0">
                                                       <Component id="jftfLieferdatum_az" alignment="1" min="-2" pref="150" max="-2" attributes="0"/>
                                                       <Component id="jftfErfassungsdatum_az" alignment="1" min="-2" pref="150" max="-2" attributes="0"/>
