--- a/src/view/AuftragAnzeigen.form
+++ b/src/view/AuftragAnzeigen.form
@@ -39,7 +39,7 @@
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="AuftragAnzeigen" pref="789" max="32767" attributes="0"/>
+                  <Component id="AuftragAnzeigen" pref="793" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -151,6 +151,11 @@
                   </Group>
                   <EmptySpace pref="84" max="32767" attributes="0"/>
               </Group>
+              <Group type="102" alignment="1" attributes="0">
+                  <EmptySpace max="32767" attributes="0"/>
+                  <Component id="jTextField1" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="123" max="-2" attributes="0"/>
+              </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
@@ -170,7 +175,9 @@
                       <Group type="102" alignment="0" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
+                                  <Component id="jTextField1" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
                                       <Component id="jlAuftragsid" alignment="3" min="-2" max="-2" attributes="0"/>
                                       <Component id="jtfAuftragsid_az" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
@@ -542,6 +549,11 @@
         <Component class="javax.swing.JFormattedTextField" name="jftfAbschlussdatum_az">
         </Component>
         <Component class="javax.swing.JFormattedTextField" name="jftfErfassungsdatum_az">
+        </Component>
+        <Component class="javax.swing.JTextField" name="jTextField1">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="jTextField1"/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
