Auftragsliste Maske an Reiter angebunden

--- a/src/view/AuftraegeAlle.form
+++ b/src/view/AuftraegeAlle.form
@@ -91,14 +91,17 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JTable" name="jTable1">
+            <Component class="javax.swing.JTable" name="jtAuftrageAlle">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="4" rowCount="200">
+                  <Table columnCount="7" rowCount="200">
                     <Column editable="true" title="Auftrags-ID" type="java.lang.Object"/>
+                    <Column editable="true" title="GP-ID" type="java.lang.Object"/>
+                    <Column editable="true" title="Erfassungsdatum" type="java.lang.Object"/>
+                    <Column editable="true" title="Lieferdatum" type="java.lang.Object"/>
+                    <Column editable="true" title="Abschlussdatum" type="java.lang.Object"/>
                     <Column editable="true" title="Status" type="java.lang.Object"/>
-                    <Column editable="true" title="Datum" type="java.lang.Object"/>
-                    <Column editable="true" title="Title 4" type="java.lang.Object"/>
+                    <Column editable="true" title="Auftragsart" type="java.lang.Object"/>
                   </Table>
                 </Property>
               </Properties>
