Auftrag Bearbeiten erweitert

--- a/src/view/AuftragAnzeigen.form
+++ b/src/view/AuftragAnzeigen.form
@@ -28,7 +28,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="AuftragAnzeigen" min="-2" pref="1018" max="-2" attributes="0"/>
-                  <EmptySpace pref="14" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
       </Group>
@@ -39,7 +39,7 @@
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="AuftragAnzeigen" max="32767" attributes="0"/>
+                  <Component id="AuftragAnzeigen" pref="804" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
