--- a/src/view/AuftraegeAlle.form
+++ b/src/view/AuftraegeAlle.form
@@ -112,6 +112,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Anzeigen"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbAnzeigen_AuftraegeAlleActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
